--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/favicon.ico" />
+    
     <!-- My CSS -->
     <link type="text/css" rel="stylesheet" href="css/index.css" >
     <link type="text/css" rel="stylesheet" href="css/selectImageDialog.css" >
