--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -40,7 +40,7 @@
     <script src="js/WebGLView.js"></script>
     <script src="js/AppController.js"></script>
     
-    <title>Hello App Engine</title>
+    <title>WebGL Img Editor</title>
   </head>
   <body>
     <noscript>
