--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -119,6 +119,19 @@
             <Button class="effectsCancelButton">Cancel</Button>
           </div>
         </div>
+        <h3>
+          <a href="#">Abstract Pixilate</a>
+        </h3>
+        <div>
+          <div class="slideControlGroup">
+            <p>Size</p>
+            <div class="abstractPixilateSlider slider"></div>
+          </div>
+          <div class="applyCancelButtons">
+            <Button class="effectsApplyButton">Apply</Button>
+            <Button class="effectsCancelButton">Cancel</Button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
