Working on adding 3d mode

--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -52,7 +52,8 @@
 <script src="js/LoadSaveController.js"></script>
 <script src="js/EffectsController.js"></script>
 <script src="js/WindowController.js"></script>
-<script src="js/WebGLView.js"></script>
+<script src="js/WebGLView2D.js"></script>
+<script src="js/WebGLView3D.js"></script>
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
 
@@ -69,6 +70,7 @@
     <div class="control_buttons">
       <button class="load">Load</button>
       <button class="save">Save</button>
+      <button class="3dview">3D Mode</button>
     </div>
     <div class="accordian_wrapper">
       <div id="effects">
