working on 3D mode

--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -53,7 +53,9 @@
 <script src="js/EffectsController.js"></script>
 <script src="js/WindowController.js"></script>
 <script src="js/WebGLView2D.js"></script>
+<script src="js/NewWebGLView2D.js"></script>
 <script src="js/WebGLView3D.js"></script>
+<script src="js/WebGLView.js"></script>
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
 
