working on project

--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -52,8 +52,8 @@
 <script src="js/LoadSaveController.js"></script>
 <script src="js/EffectsController.js"></script>
 <script src="js/WindowController.js"></script>
+<script src="js/CustomFlyControls.js"></script>
 <script src="js/WebGLView2D.js"></script>
-<script src="js/NewWebGLView2D.js"></script>
 <script src="js/WebGLView3D.js"></script>
 <script src="js/WebGLView.js"></script>
 <script src="js/UniformManager.js"></script>
