added titles to tools

--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -167,7 +167,7 @@
               <Button title="Bucket Tool">
                 <img src="images/tools/stock-tool-bucket-fill-22.png" alt="move"/>
               </Button>
-              <Button title="crop tool">
+              <Button title="Crop Tool">
                 <img src="images/tools/stock-tool-crop-22.png" alt="move"/>
               </Button>
               <Button title="Ellipse Select Tool">
@@ -176,26 +176,28 @@
               <Button title="Eraser Tool">
                 <img src="images/tools/stock-tool-eraser-22.png" alt="move"/>
               </Button>
-              <Button>
+              <Button title="Wand Select">
                 <img src="images/tools/stock-tool-fuzzy-select-22.png" alt="move"/>
               </Button>
-              <Button>
+              <Button title="Paintbrush">
                 <img src="images/tools/stock-tool-paintbrush-22.png" alt="move"/>
               </Button>
-              <Button>
+              <Button title="Pencil Tool">
                 <img src="images/tools/stock-tool-pencil-22.png" alt="move"/>
               </Button>
-              <Button>
+              <Button title="Rectangle Select">
                 <img src="images/tools/stock-tool-rect-select-22.png" alt="Rec"/>
               </Button>
-              <Button>
+              <Button title="Move One Tool">
                 <img src="images/tools/stock-tool-move-22.png" alt="move"/>
               </Button>
-              <Button>
+              <Button title="Movew Two Tool">
                 <img src="images/tools/stock-tool-move-2-22.png" alt="move"/>
               </Button>
             </div>
-            <div id="colorSelector"><div style="background-color: #0000ff"></div></div>
+            <div id="colorSelector" title="Color Selector">
+              <div style="background-color: #0000ff"></div>
+            </div>
           </div>
         </div>
       </div>
