--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -31,6 +31,10 @@
   type="text/css"
   rel="stylesheet"
   href="css/selectImageDialog.css">
+<link
+  type="text/css"
+  rel="stylesheet"
+  href="css/tools.css">  
 
 <!-- Setup Jquery -->
 <link
@@ -164,34 +168,34 @@
         <div>
           <div class="slideControlGroup">
             <div id="imageTools">
-              <Button title="Bucket Tool">
+              <Button class="toolButton" title="Bucket Tool">
                 <img src="images/tools/stock-tool-bucket-fill-22.png" alt="move"/>
               </Button>
-              <Button title="Crop Tool">
+              <Button class="toolButton" title="Crop Tool">
                 <img src="images/tools/stock-tool-crop-22.png" alt="move"/>
               </Button>
-              <Button title="Ellipse Select Tool">
+              <Button class="toolButton" title="Ellipse Select Tool">
                 <img src="images/tools/stock-tool-ellipse-select-22.png" alt="move"/>
               </Button>
-              <Button title="Eraser Tool">
+              <Button class="toolButton" title="Eraser Tool">
                 <img src="images/tools/stock-tool-eraser-22.png" alt="move"/>
               </Button>
-              <Button title="Wand Select">
+              <Button class="toolButton" title="Wand Select">
                 <img src="images/tools/stock-tool-fuzzy-select-22.png" alt="move"/>
               </Button>
-              <Button title="Paintbrush">
+              <Button class="toolButton" title="Paintbrush">
                 <img src="images/tools/stock-tool-paintbrush-22.png" alt="move"/>
               </Button>
-              <Button title="Pencil Tool">
+              <Button class="toolButton" title="Pencil Tool">
                 <img src="images/tools/stock-tool-pencil-22.png" alt="move"/>
               </Button>
-              <Button title="Rectangle Select">
+              <Button class="toolButton" title="Rectangle Select">
                 <img src="images/tools/stock-tool-rect-select-22.png" alt="Rec"/>
               </Button>
-              <Button title="Move One Tool">
+              <Button class="toolButton" title="Move One Tool">
                 <img src="images/tools/stock-tool-move-22.png" alt="move"/>
               </Button>
-              <Button title="Movew Two Tool">
+              <Button class="toolButton" title="Movew Two Tool">
                 <img src="images/tools/stock-tool-move-2-22.png" alt="move"/>
               </Button>
             </div>
