Added particle view of image

--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -67,6 +67,7 @@
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
 <script src="js/WebGL2DTools.js"></script>
+<script src="js/particleImage.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
