working on 3d view

--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -11,6 +11,7 @@
 <link type="text/css" rel="stylesheet" href="css/index.css">
 <link type="text/css" rel="stylesheet" href="css/selectImageDialog.css">
 <link type="text/css" rel="stylesheet" href="css/tools.css">
+<link type="text/css" rel="stylesheet" href="css/accordianCSS.css">
 
 <!-- Setup Jquery -->
 <link type="text/css" rel="stylesheet"
@@ -42,7 +43,10 @@
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
 <script src="js/WebGL2DTools.js"></script>
-<script src="js/particleImage.js"></script>
+<script src="js/ParticleImage.js"></script>
+<script src="js/Modes3DView.js"></script>
+<script src="js/3DMode/ImageCarousel.js"></script>
+<script src="js/3DMode/CarouselImagePlane.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
