--- a/GraphicsProject/war/html/dialogs/dialogs.html
+++ b/GraphicsProject/war/html/dialogs/dialogs.html
@@ -4,21 +4,21 @@
     <div class="dialog_image_wrapper">
       <div class="dialog_images">
         <img
-          src="images/sample_pic_01.jpg"
+          src="images/sampleLD/sample_pic_01.jpg"
           alt="Sample Pic 01" /> <img
-          src="images/sample_pic_02.jpg"
+          src="images/sampleLD/sample_pic_02.jpg"
           alt="Sample Pic 02" /> <img
-          src="images/sample_pic_03.jpg"
+          src="images/sampleLD/sample_pic_03.jpg"
           alt="Sample Pic 03" /> <img
-          src="images/sample_pic_04.jpg"
+          src="images/sampleLD/sample_pic_04.jpg"
           alt="Sample Pic 04" /> <img
-          src="images/sample_pic_01.jpg"
+          src="images/sampleLD/sample_pic_01.jpg"
           alt="Sample Pic 01" /> <img
-          src="images/sample_pic_02.jpg"
+          src="images/sampleLD/sample_pic_02.jpg"
           alt="Sample Pic 02" /> <img
-          src="images/sample_pic_05.jpg"
+          src="images/sampleLD/sample_pic_05.jpg"
           alt="Sample Pic 03" /> <img
-          src="images/sample_pic_06.jpg"
+          src="images/sampleLD/sample_pic_06.jpg"
           alt="Sample Pic 04" />
       </div>
     </div>
