Got some code working for rectangle selector

--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -47,6 +47,7 @@
 <script src="js/Modes3DView.js"></script>
 <script src="js/3DMode/ImageCarousel.js"></script>
 <script src="js/3DMode/CarouselImagePlane.js"></script>
+<script src="js/2DMode/Tools/RectangleSelector.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
