--- a/GraphicsProject/war/html/sidebar/threeDModes.html
+++ b/GraphicsProject/war/html/sidebar/threeDModes.html
@@ -4,7 +4,18 @@
 			<a href="#">Particle Image</a>
 		</h3>
 		<div>
-			<p>This is a particle image</p>
+			<div class="slideControlGroup">
+				<p>Density</p>
+				<div class="particleDensitySlider slider"></div>
+			</div>
+			<div class="slideControlGroup">
+				<p>Camera Speed</p>
+				<div class="particleCameraSpeedSlider slider"></div>
+			</div>
+			<div class="applyCancelButtons">
+				<Button class="modes3DApplyButton">Apply</Button>
+				<Button class="modes3DCancelButton">Cancel</Button>
+			</div>
 		</div>
 		<h3>
 			<a href="#">3D Image Carousel</a>
