--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -24,6 +24,11 @@
 	type="text/css" />
 <script type="text/javascript" src="vendor/eyecon/js/colorpicker.js"></script>
 
+<!-- Setup Gritter -->
+<link rel="stylesheet" href="vendor/gritter/css/jquery.gritter.css"
+	type="text/css" />
+<script type="text/javascript" src="vendor/gritter/js/jquery.gritter.min.js"></script>
+
 <!-- Setup WebGL Libraries -->
 <script src="vendor/three.js/Three.js"></script>
 <script src="vendor/three.js/Detector.js"></script>
@@ -43,11 +48,12 @@
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
 <script src="js/WebGL2DTools.js"></script>
-<script src="js/ParticleImage.js"></script>
+<!-- <script src="js/ParticleImage.js"></script> -->
 <script src="js/Modes3DView.js"></script>
 <script src="js/3DMode/ImageCarousel.js"></script>
 <script src="js/3DMode/CarouselImagePlane.js"></script>
 <script src="js/2DMode/Tools/RectangleSelector.js"></script>
+<script src="js/3DMode/ExperimentalParticleImage.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
