Lots of work on particle view

--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -48,12 +48,12 @@
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
 <script src="js/WebGL2DTools.js"></script>
-<!-- <script src="js/ParticleImage.js"></script> -->
+<script src="js/ParticleImage.js"></script>
 <script src="js/Modes3DView.js"></script>
 <script src="js/3DMode/ImageCarousel.js"></script>
 <script src="js/3DMode/CarouselImagePlane.js"></script>
 <script src="js/2DMode/Tools/RectangleSelector.js"></script>
-<script src="js/3DMode/ExperimentalParticleImage.js"></script>
+<!-- <script src="js/3DMode/ExperimentalParticleImage.js"></script> -->
 
 <title>WebGL Img Editor</title>
 </head>
