--- a/GraphicsProject/war/html/shaders/vertexParticleShader.html
+++ b/GraphicsProject/war/html/shaders/vertexParticleShader.html
@@ -7,6 +7,10 @@
 	//Common
 	attribute float size;
 	attribute vec3 ca;
+	attribute vec2 posxy;
+
+	uniform float time;
+	uniform vec2 img_size;
 
 	varying vec3 vColor;
 
@@ -21,6 +25,7 @@
 
 		gl_Position = projectionMatrix * mvPosition;
 
+		gl_Position.x += sin(time/360.0*3.14159*2.0)*10.0;
 	}
   
   </script>
