Can now change the image of the particle image

--- a/GraphicsProject/war/html/sidebar/threeDModes.html
+++ b/GraphicsProject/war/html/sidebar/threeDModes.html
@@ -9,8 +9,8 @@
 				<div class="particleDensitySlider slider"></div>
 			</div>
 			<div class="slideControlGroup">
-				<p>Camera Speed</p>
-				<div class="particleCameraSpeedSlider slider"></div>
+				<p>Image</p>
+				<div class="particleImageSlider slider"></div>
 			</div>
 			<div class="applyCancelButtons">
 				<Button class="modes3DApplyButton">Apply</Button>
