--- a/GraphicsProject/war/html/sidebar/twoDEffects.html
+++ b/GraphicsProject/war/html/sidebar/twoDEffects.html
@@ -78,6 +78,19 @@
 			</div>
 		</div>
 		<h3>
+		<a href="#">Painting</a>
+		</h3>
+		<div>
+			<div class="slideControlGroup">
+				<p>Strength</p>
+				<div class="cartoonStrengthSlider slider"></div>
+			</div>
+			<div class="applyCancelButtons">
+				<Button class="effectsApplyButton">Apply</Button>
+				<Button class="effectsCancelButton">Cancel</Button>
+			</div>
+		</div>
+		<h3>
 			<a href="#">Tools</a>
 		</h3>
 		<div>
