--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -14,6 +14,11 @@
 <link type="text/css" rel="stylesheet" href="css/accordianCSS.css">
 <link type="text/css" rel="stylesheet" href="css/webkitscrollbar.css">
 
+<!-- Web Fonts -->
+<link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet" type="text/css">
+
 <!-- Setup Jquery -->
 <link type="text/css" rel="stylesheet"
 	href="vendor/jquery/css/dark-hive/jquery-ui-1.8.18.custom.css">
@@ -51,13 +56,13 @@
 <script src="js/WebGLView.js"></script>
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
-<script src="js/WebGL2DTools.js"></script>
 <script src="js/ParticleImage.js"></script>
 <script src="js/Modes3DView.js"></script>
 <script src="js/3DMode/ImageCarousel.js"></script>
 <script src="js/3DMode/CarouselImagePlane.js"></script>
+<script src="js/2DMode/WebGL2DTools.js"></script>
 <script src="js/2DMode/Tools/RectangleSelector.js"></script>
-<!-- <script src="js/3DMode/ExperimentalParticleImage.js"></script> -->
+<script src="js/2DMode/Tools/PencilTool.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
