going to dinner

--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -63,6 +63,8 @@
 <script src="js/2DMode/WebGL2DTools.js"></script>
 <script src="js/2DMode/Tools/RectangleSelector.js"></script>
 <script src="js/2DMode/Tools/PencilTool.js"></script>
+<script src="js/2DMode/Tools/SelectedArea.js"></script>
+<script src="js/2DMode/Tools/MoveTool.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
