--- a/GraphicsProject/war/html/sidebar/twoDEffects.html
+++ b/GraphicsProject/war/html/sidebar/twoDEffects.html
@@ -78,7 +78,7 @@
 			</div>
 		</div>
 		<h3>
-		<a href="#">Painting</a>
+			<a href="#">Painting</a>
 		</h3>
 		<div>
 			<div class="slideControlGroup">
@@ -91,26 +91,26 @@
 			</div>
 		</div>
 		<h3>
-			<a href="#">Tools</a>
+			<a href="#">Tools (Experimental)</a>
 		</h3>
 		<div>
 			<div class="slideControlGroup">
 				<div id="imageTools">
-					<Button class="toolButton" title="Bucket Tool">
-						<img src="images/tools/stock-tool-bucket-fill-22.png" alt="move" />
-					</Button>
-					<Button class="toolButton" title="Crop Tool">
-						<img src="images/tools/stock-tool-crop-22.png" alt="move" />
-					</Button>
-					<Button class="toolButton" title="Ellipse Select Tool">
-						<img src="images/tools/stock-tool-ellipse-select-22.png"
-							alt="move" />
-					</Button>
 					<Button class="toolButton" title="Pencil Tool">
 						<img src="images/tools/stock-tool-pencil-22.png" alt="move" />
 					</Button>
 					<Button class="toolButton" title="Rectangle Select">
 						<img src="images/tools/stock-tool-rect-select-22.png" alt="Rec" />
+					</Button>
+					<Button class="toolButton" title="Crop Tool">
+						<img src="images/tools/stock-tool-crop-22.png" alt="move" />
+					</Button>
+					<Button class="toolButton" title="Bucket Tool">
+						<img src="images/tools/stock-tool-bucket-fill-22.png" alt="move" />
+					</Button>
+					<Button class="toolButton" title="Ellipse Select Tool">
+						<img src="images/tools/stock-tool-ellipse-select-22.png"
+							alt="move" />
 					</Button>
 					<Button class="toolButton" title="Move One Tool">
 						<img src="images/tools/stock-tool-move-22.png" alt="move" />
