--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -13,6 +13,7 @@
 <link type="text/css" rel="stylesheet" href="css/tools.css">
 <link type="text/css" rel="stylesheet" href="css/accordianCSS.css">
 <link type="text/css" rel="stylesheet" href="css/webkitscrollbar.css">
+<link type="text/css" rel="stylesheet" href="css/customselect.css">
 
 <!-- Web Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
@@ -31,20 +32,20 @@
 <script type="text/javascript" src="vendor/eyecon/js/colorpicker.js"></script>
 
 <!-- Setup Gritter -->
-<link rel="stylesheet" href="vendor/gritter/css/jquery.gritter.css"
-	type="text/css" />
-<script type="text/javascript" src="vendor/gritter/js/jquery.gritter.min.js"></script>
+<!-- <link rel="stylesheet" href="vendor/gritter/css/jquery.gritter.css" -->
+<!-- 	type="text/css" /> -->
+<!-- <script type="text/javascript" src="vendor/gritter/js/jquery.gritter.min.js"></script> -->
 
 <!-- Setup WebGL Libraries -->
 <script src="vendor/three.js/Three.js"></script>
 <script src="vendor/three.js/Detector.js"></script>
-<script src="vendor/threex/THREEx.screenshot.js"></script>
+<!-- <script src="vendor/threex/THREEx.screenshot.js"></script> -->
 <script src="vendor/threex/THREEx.FullScreen.js"></script>
-<script src="vendor/threex/THREEx.WindowResize.js"></script>
-<script src="vendor/threex/threex.dragpancontrols.js"></script>
+<!-- <script src="vendor/threex/THREEx.WindowResize.js"></script> -->
+<!-- <script src="vendor/threex/threex.dragpancontrols.js"></script> -->
 
 <!-- Custom THREE.js -->
-<script src="js/CustomThreeJS/TrackballControls.js"></script>
+<script src="js/CustomVendor/TrackballControls.js"></script>
 
 <!-- My Javascript Files -->
 <script src="js/LoadSaveModeController.js"></script>
@@ -65,6 +66,7 @@
 <script src="js/2DMode/Tools/PencilTool.js"></script>
 <script src="js/2DMode/Tools/SelectedArea.js"></script>
 <script src="js/2DMode/Tools/MoveTool.js"></script>
+<script src="js/2DMode/Tools/CropTool.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
