--- a/GraphicsProject/war/html/sidebar/twoDEffects.html
+++ b/GraphicsProject/war/html/sidebar/twoDEffects.html
@@ -91,6 +91,26 @@
 			</div>
 		</div>
 		<h3>
+			<a href="#">Color Map</a>
+		</h3>
+		<div>
+			<div class="slideControlGroup">
+				<p>Style</p>
+				<select class="colorMapSelect">
+					<option value='0'>Sepia</option>
+					<option value='1'>Thermal</option>
+					<option value='2'>Combustion</option>
+					<option value='3'>Satellite</option>
+					<option value='4'>Infrared</option>
+					<option value='5'>Autotropic</option>
+				</select>
+			</div>
+			<div class="applyCancelButtons">
+				<Button class="effectsApplyButton">Apply</Button>
+				<Button class="effectsCancelButton">Cancel</Button>
+			</div>
+		</div>
+		<h3>
 			<a href="#">Tools (Experimental)</a>
 		</h3>
 		<div>
