--- a/GraphicsProject/war/index.html
+++ b/GraphicsProject/war/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+WebGL: INVALID_VALUE: texImage2D: invalid image
+WebGL: INVALID_OPERATION: generateMipmap: level 0 not power of 2 or not all the same size
+GL_INVALID_ENUM : glActiveTexture: texture_unit out of range. (repeated 6 times)
+WebGL: too many errors, no more errors will be reported to the console for this context.
 <!-- The HTML 4.01 Transitional DOCTYPE declaration-->
 <!-- above set at the top of the file will set     -->
 <!-- the browser's rendering engine into           -->
@@ -21,6 +25,13 @@
 <link type="text/css" rel="stylesheet" href="css/selectImageDialog.css">
 <link type="text/css" rel="stylesheet" href="css/tools.css">
 <link type="text/css" rel="stylesheet" href="css/accordianCSS.css">
+<link type="text/css" rel="stylesheet" href="css/webkitscrollbar.css">
+<link type="text/css" rel="stylesheet" href="css/customselect.css">
+
+<!-- Web Fonts -->
+<link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet" type="text/css">
 
 <!-- Setup Jquery -->
 <link type="text/css" rel="stylesheet"
@@ -34,17 +45,20 @@
 <script type="text/javascript" src="vendor/eyecon/js/colorpicker.js"></script>
 
 <!-- Setup Gritter -->
-<link rel="stylesheet" href="vendor/gritter/css/jquery.gritter.css"
-	type="text/css" />
-<script type="text/javascript" src="vendor/gritter/js/jquery.gritter.min.js"></script>
+<!-- <link rel="stylesheet" href="vendor/gritter/css/jquery.gritter.css" -->
+<!-- 	type="text/css" /> -->
+<!-- <script type="text/javascript" src="vendor/gritter/js/jquery.gritter.min.js"></script> -->
 
 <!-- Setup WebGL Libraries -->
 <script src="vendor/three.js/Three.js"></script>
 <script src="vendor/three.js/Detector.js"></script>
-<script src="vendor/threex/THREEx.screenshot.js"></script>
+<!-- <script src="vendor/threex/THREEx.screenshot.js"></script> -->
 <script src="vendor/threex/THREEx.FullScreen.js"></script>
-<script src="vendor/threex/THREEx.WindowResize.js"></script>
-<script src="vendor/threex/threex.dragpancontrols.js"></script>
+<!-- <script src="vendor/threex/THREEx.WindowResize.js"></script> -->
+<!-- <script src="vendor/threex/threex.dragpancontrols.js"></script> -->
+
+<!-- Custom THREE.js -->
+<script src="js/CustomVendor/TrackballControls.js"></script>
 
 <!-- My Javascript Files -->
 <script src="js/LoadSaveModeController.js"></script>
@@ -56,13 +70,16 @@
 <script src="js/WebGLView.js"></script>
 <script src="js/UniformManager.js"></script>
 <script src="js/AppController.js"></script>
-<script src="js/WebGL2DTools.js"></script>
 <script src="js/ParticleImage.js"></script>
 <script src="js/Modes3DView.js"></script>
 <script src="js/3DMode/ImageCarousel.js"></script>
 <script src="js/3DMode/CarouselImagePlane.js"></script>
+<script src="js/2DMode/WebGL2DTools.js"></script>
 <script src="js/2DMode/Tools/RectangleSelector.js"></script>
-<!-- <script src="js/3DMode/ExperimentalParticleImage.js"></script> -->
+<script src="js/2DMode/Tools/PencilTool.js"></script>
+<script src="js/2DMode/Tools/SelectedArea.js"></script>
+<script src="js/2DMode/Tools/MoveTool.js"></script>
+<script src="js/2DMode/Tools/CropTool.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
@@ -70,12 +87,12 @@
   <noscript>
     <p>Please enable JavaScript to use this program.</p>
   </noscript>
-  <div class="top_bar">
-    <h1>CSCI 7000 - WebGl Based Image Editor</h1>
-  </div>
+<!--   <div class="top_bar"> -->
+<!--     <h1>CSCI 7000 - WebGl Based Image Editor</h1> -->
+<!--   </div> -->
   <div class="side_bar">
     <div class="control_buttons">
-      <button class="load">Load</button>
+      <button class="load mode2D">Load</button>
       <button class="save">Save</button>
       <button class="3dview">3D Mode</button>
     </div>
@@ -159,26 +176,59 @@
 			</div>
 		</div>
 		<h3>
-			<a href="#">Tools</a>
+			<a href="#">Painting</a>
+		</h3>
+		<div>
+			<div class="slideControlGroup">
+				<p>Strength</p>
+				<div class="cartoonStrengthSlider slider"></div>
+			</div>
+			<div class="applyCancelButtons">
+				<Button class="effectsApplyButton">Apply</Button>
+				<Button class="effectsCancelButton">Cancel</Button>
+			</div>
+		</div>
+		<h3>
+			<a href="#">Color Map</a>
+		</h3>
+		<div>
+			<div class="slideControlGroup">
+				<p>Style</p>
+				<select class="colorMapSelect">
+					<option value='0'>Sepia</option>
+					<option value='1'>Thermal</option>
+					<option value='2'>Combustion</option>
+					<option value='3'>Satellite</option>
+					<option value='4'>Infrared</option>
+					<option value='5'>Autotropic</option>
+				</select>
+			</div>
+			<div class="applyCancelButtons">
+				<Button class="effectsApplyButton">Apply</Button>
+				<Button class="effectsCancelButton">Cancel</Button>
+			</div>
+		</div>
+		<h3>
+			<a href="#">Tools (Experimental)</a>
 		</h3>
 		<div>
 			<div class="slideControlGroup">
 				<div id="imageTools">
-					<Button class="toolButton" title="Bucket Tool">
-						<img src="images/tools/stock-tool-bucket-fill-22.png" alt="move" />
-					</Button>
-					<Button class="toolButton" title="Crop Tool">
-						<img src="images/tools/stock-tool-crop-22.png" alt="move" />
-					</Button>
-					<Button class="toolButton" title="Ellipse Select Tool">
-						<img src="images/tools/stock-tool-ellipse-select-22.png"
-							alt="move" />
-					</Button>
 					<Button class="toolButton" title="Pencil Tool">
 						<img src="images/tools/stock-tool-pencil-22.png" alt="move" />
 					</Button>
 					<Button class="toolButton" title="Rectangle Select">
 						<img src="images/tools/stock-tool-rect-select-22.png" alt="Rec" />
+					</Button>
+					<Button class="toolButton" title="Crop Tool">
+						<img src="images/tools/stock-tool-crop-22.png" alt="move" />
+					</Button>
+					<Button class="toolButton" title="Bucket Tool">
+						<img src="images/tools/stock-tool-bucket-fill-22.png" alt="move" />
+					</Button>
+					<Button class="toolButton" title="Ellipse Select Tool">
+						<img src="images/tools/stock-tool-ellipse-select-22.png"
+							alt="move" />
 					</Button>
 					<Button class="toolButton" title="Move One Tool">
 						<img src="images/tools/stock-tool-move-22.png" alt="move" />
@@ -286,7 +336,14 @@
 
 	//Ink
 	uniform float inkStrength;
-  
+
+	//Painting
+	uniform float paintingStrength;
+
+	//Tone Filter
+	uniform sampler2D textureMap;
+	uniform int toneMode;
+
 	//Contrast Calculation
 	vec3 contrastCalc(vec3 pixelColor)
 	{
@@ -399,6 +456,38 @@
 		return pixelColor;
 	}
 
+	vec3 paintingShader(vec3 pixelColor){
+		pixelColor.r = float(int(pixelColor.r * paintingStrength))/paintingStrength;
+		pixelColor.g = float(int(pixelColor.g * paintingStrength))/paintingStrength;
+		pixelColor.b = float(int(pixelColor.b * paintingStrength))/paintingStrength;
+		float total = 0.0;
+		vec4 color = vec4(0.0);
+		for(float i = -4.0; i <= 4.0 ; i += 1.0)
+		{
+			for(float j=-4.0; j <= 4.0 ; j+= 1.0)
+			{
+				vec4 pixel = texture2D( uSampler, vUv + vec2(i/width, j/height));
+				float temp = 1.0 - abs(dot(pixel.rgb - pixelColor, vec3(0.25)));
+				temp = pow(temp, 100.0);
+				color += pixel * temp;
+				total += temp;
+			}
+		}
+		return (color / total).rgb;
+	}
+
+	vec3 sepiaFilter(vec3 pixelColor){
+		vec3 color;
+		color.r = dot(pixelColor, vec3(.393, .769, .189));
+		color.g = dot(pixelColor, vec3(.349, .686, .168));
+		color.b = dot(pixelColor, vec3(.272, .534, .131));
+		return color;
+	}
+	
+	vec3 toneMap(vec3 pixelColor){
+		return texture2D( textureMap , vec2(pixelColor.r , 0)).rgb;
+	}
+
     void main()
     {
 		//vec2 test = vec2(vTextureCoord, vTextureCoord);
@@ -417,6 +506,13 @@
 			return;
 		} else if(mode == 4){
 			pixelColor = inkCalc(pixelColor);
+		} else if(mode == 5){
+			pixelColor = paintingShader(pixelColor);
+		} else if(mode == 6){
+			if(toneMode == 0)
+				pixelColor = sepiaFilter(pixelColor);
+			else
+				pixelColor = toneMap(pixelColor);
 		}
 
 		//Set Color of pixel
