Crop tool now works

--- a/GraphicsProject/war/html/sidebar/twoDEffects.html
+++ b/GraphicsProject/war/html/sidebar/twoDEffects.html
@@ -125,6 +125,12 @@
 					<Button class="toolButton" title="Crop Tool">
 						<img src="images/tools/stock-tool-crop-22.png" alt="move" />
 					</Button>
+					<div>
+						<div class="CropToolSettings toolSettings">
+							<Button class="cropApply">Apply</Button>
+							<Button class="cropCancel">Cancel</Button>
+						</div>
+					</div>
 					<Button class="toolButton" title="Bucket Tool">
 						<img src="images/tools/stock-tool-bucket-fill-22.png" alt="move" />
 					</Button>
