Added new icons for tools

--- a/GraphicsProject/war/html/sidebar/twoDEffects.html
+++ b/GraphicsProject/war/html/sidebar/twoDEffects.html
@@ -125,31 +125,50 @@
 					<Button class="toolButton" title="Crop Tool">
 						<img src="images/tools/stock-tool-crop-22.png" alt="move" />
 					</Button>
-					<div>
-						<div class="CropToolSettings toolSettings">
-							<Button class="cropApply">Apply</Button>
-							<Button class="cropCancel">Cancel</Button>
-						</div>
-					</div>
 					<Button class="toolButton" title="Bucket Tool">
 						<img src="images/tools/stock-tool-bucket-fill-22.png" alt="move" />
 					</Button>
-					<Button class="toolButton" title="Ellipse Select Tool">
-						<img src="images/tools/stock-tool-ellipse-select-22.png"
-							alt="move" />
+					<div class="toolControlSection paintBucketTool">
+						<div class="slideControlGroup">
+							<p>Tolerance : 50%</p>
+							<div class="cartoonStrengthSlider slider"></div>
+						</div>
+					</div>
+					<div class="toolControlSection cropTool">
+						<Button class="cropApply">Apply</Button>
+						<Button class="cropCancel">Cancel</Button>
+					</div>
+					<Button class="toolButton" title="Rotate Clockwiese 90 degrees">
+						<img src="images/tools/stock-tool-rotate-clockwise-22.png"
+							alt="roate" />
 					</Button>
-					<Button class="toolButton" title="Move One Tool">
-						<img src="images/tools/stock-tool-move-22.png" alt="move" />
+					<Button class="toolButton" title="Rotate Counter Clockwiese 90 degrees">
+						<img src="images/tools/stock-tool-rotate-counter-clockwise-22.png" alt="rotate" />
 					</Button>
-					<Button class="toolButton" title="Paintbrush">
-						<img src="images/tools/stock-tool-paintbrush-22.png" alt="move" />
+					<Button class="toolButton" title="Flip Horizontal">
+						<img src="images/tools/stock-tool-flip-hor-22.png" alt="flip hor" />
 					</Button>
-					<Button class="toolButton" title="Wand Select">
-						<img src="images/tools/stock-tool-fuzzy-select-22.png" alt="move" />
+					<Button class="toolButton" title="Flip Vertical">
+						<img src="images/tools/stock-tool-flip-vert-22.png" alt="flip vert" />
 					</Button>
-					<Button class="toolButton" title="Eraser Tool">
-						<img src="images/tools/stock-tool-eraser-22.png" alt="move" />
+					<Button class="toolButton" title="Scale Horizontal">
+						<img src="images/tools/stock-tool-scale-hor-22.png" alt="move" />
 					</Button>
+					<Button class="toolButton" title="Scale Horizontal">
+						<img src="images/tools/stock-tool-scale-vert-22.png" alt="move" />
+					</Button>
+					<div class="toolControlSection paintBucketTool">
+						<div class="slideControlGroup">
+							<p>Scale : 50%</p>
+							<div class="cartoonStrengthSlider slider"></div>
+						</div>
+					</div>
+					<div class="toolControlSection paintBucketTool">
+						<div class="slideControlGroup">
+							<p>Scale : 50%</p>
+							<div class="cartoonStrengthSlider slider"></div>
+						</div>
+					</div>
 				</div>
 				<div id="colorSelector" title="Color Selector">
 					<div style="background-color: #0000ff"></div>
