Got Scaling Working

--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -67,6 +67,9 @@
 <script src="js/2DMode/Tools/SelectedArea.js"></script>
 <script src="js/2DMode/Tools/MoveTool.js"></script>
 <script src="js/2DMode/Tools/CropTool.js"></script>
+<script src="js/2DMode/Tools/BucketTool.js"></script>
+<script src="js/2DMode/Tools/ScaleHorizontalTool.js"></script>
+<script src="js/2DMode/Tools/ScaleVerticalTool.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
