--- a/GraphicsProject/war/html/sidebar/twoDEffects.html
+++ b/GraphicsProject/war/html/sidebar/twoDEffects.html
@@ -131,12 +131,11 @@
 					<div class="toolControlSection paintBucketTool">
 						<div class="slideControlGroup">
 							<p>Tolerance : 50%</p>
-							<div class="cartoonStrengthSlider slider"></div>
+							<div class="cartoonStrengthSlider"></div>
 						</div>
 					</div>
 					<div class="toolControlSection cropTool">
 						<Button class="cropApply">Apply</Button>
-						<Button class="cropCancel">Cancel</Button>
 					</div>
 					<Button class="toolButton" title="Rotate Clockwiese 90 degrees">
 						<img src="images/tools/stock-tool-rotate-clockwise-22.png"
@@ -154,19 +153,19 @@
 					<Button class="toolButton" title="Scale Horizontal">
 						<img src="images/tools/stock-tool-scale-hor-22.png" alt="move" />
 					</Button>
-					<Button class="toolButton" title="Scale Horizontal">
+					<Button class="toolButton" title="Scale Vertical">
 						<img src="images/tools/stock-tool-scale-vert-22.png" alt="move" />
 					</Button>
-					<div class="toolControlSection paintBucketTool">
+					<div class="toolControlSection scaleHorizontal">
 						<div class="slideControlGroup">
-							<p>Scale : 50%</p>
-							<div class="cartoonStrengthSlider slider"></div>
+							<p class="scaleHorizontalText">Scale : 100%</p>
+							<div class="scaleHorizontalSlider"></div>
 						</div>
 					</div>
-					<div class="toolControlSection paintBucketTool">
+					<div class="toolControlSection scaleVertical">
 						<div class="slideControlGroup">
-							<p>Scale : 50%</p>
-							<div class="cartoonStrengthSlider slider"></div>
+							<p class="scaleVerticalText">Scale : 100%</p>
+							<div class="scaleVerticalSlider"></div>
 						</div>
 					</div>
 				</div>
