Got flip working

--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -70,6 +70,8 @@
 <script src="js/2DMode/Tools/BucketTool.js"></script>
 <script src="js/2DMode/Tools/ScaleHorizontalTool.js"></script>
 <script src="js/2DMode/Tools/ScaleVerticalTool.js"></script>
+<script src="js/2DMode/Tools/FlipImageVertical.js"></script>
+<script src="js/2DMode/Tools/FlipImageHorizontal.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
