--- a/GraphicsProject/war/html/sidebar/twoDEffects.html
+++ b/GraphicsProject/war/html/sidebar/twoDEffects.html
@@ -130,8 +130,8 @@
 					</Button>
 					<div class="toolControlSection paintBucketTool">
 						<div class="slideControlGroup">
-							<p>Tolerance : 50%</p>
-							<div class="cartoonStrengthSlider"></div>
+							<p class="bucketToolText">Tolerance : 50%</p>
+							<div class="bucketToleranceSlider"></div>
 						</div>
 					</div>
 					<div class="toolControlSection cropTool">
