--- a/GraphicsProject/war/html/head.html
+++ b/GraphicsProject/war/html/head.html
@@ -72,6 +72,8 @@
 <script src="js/2DMode/Tools/ScaleVerticalTool.js"></script>
 <script src="js/2DMode/Tools/FlipImageVertical.js"></script>
 <script src="js/2DMode/Tools/FlipImageHorizontal.js"></script>
+<script src="js/2DMode/Tools/RotateClockwise.js"></script>
+<script src="js/2DMode/Tools/RotateCounterClockwise.js"></script>
 
 <title>WebGL Img Editor</title>
 </head>
